Implmented 2 todo apps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,13 @@
     "module": "es2020",
     "lib": [
       "es2018",
-      "dom"
+      "dom",
     ]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
   }
 }
